--- a/SupplierService.csproj
+++ b/SupplierService.csproj
@@ -7,5 +7,6 @@
     <PackageReference Include="Grpc" Version="2.28.0-pre3"/>
     <PackageReference Include="Grpc.Core" Version="2.28.0-pre3"/>
     <PackageReference Include="Grpc.Tools" Version="2.28.0-pre3"/>
+    <PackageReference Include="Google.Protobuf" Version="3.11.4"/>
   </ItemGroup>
 </Project>
