--- a/SupplierService.csproj
+++ b/SupplierService.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="Grpc.Core" Version="2.28.0-pre3"/>
     <PackageReference Include="Grpc.Tools" Version="2.28.0-pre3"/>
     <PackageReference Include="Google.Protobuf" Version="3.11.4"/>
+    <PackageReference Include="MongoDB.Driver" Version="2.10.2"/>
   </ItemGroup>
 </Project>
