--- a/client/SuppliersClient.csproj
+++ b/client/SuppliersClient.csproj
@@ -7,9 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.11.4" />
-    <PackageReference Include="Grpc" Version="2.27.0" />
-    <PackageReference Include="Grpc.Core" Version="2.27.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.27.0">
+    <PackageReference Include="Grpc" Version="2.28.0-pre3" />
+    <PackageReference Include="Grpc.Core" Version="2.28.0-pre3" />
+    <PackageReference Include="Grpc.Tools" Version="2.28.0-pre3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
